# mecha-flash-tool

./: README.md
cli/: Cargo.toml
cli/src/: commands.rs  lib.rs  main.rs  script.rs
lib/uuu-rs/: build.rs
lib/uuu-rs/src/: devices.rs  lib.rs  notification.rs
